<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/baseConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/bottomConstraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/itemLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/recipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/recipe_name_hint"
                android:inputType="textPersonName"
                android:textSize="@dimen/text_size" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/labelRow"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_px_height">

                <TextView
                    android:id="@+id/itemNameLabel"
                    style="@style/ItemLabelStyle"
                    android:text="@string/item_name_label"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/itemStartQuantityLabel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/itemStartQuantityLabel"
                    style="@style/ItemLabelStyle"
                    android:text="@string/item_quantity_label"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/itemStartUnitsLabel"
                    app:layout_constraintStart_toEndOf="@id/itemNameLabel"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.125" />

                <TextView
                    android:id="@+id/itemStartUnitsLabel"
                    style="@style/ItemLabelStyle"
                    android:text="@string/item_units_label"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/itemEndQuantityLabel"
                    app:layout_constraintStart_toEndOf="@id/itemStartQuantityLabel"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.175" />

                <TextView
                    android:id="@+id/itemEndQuantityLabel"
                    style="@style/ItemLabelStyle"
                    android:text="@string/item_quantity_label"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/itemEndUnitsLabel"
                    app:layout_constraintStart_toEndOf="@id/itemStartUnitsLabel"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.125" />

                <TextView
                    android:id="@+id/itemEndUnitsLabel"
                    style="@style/ItemLabelStyle"
                    android:text="@string/item_units_label"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/itemEndQuantityLabel"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.175" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="3dp"
                android:background="?android:attr/listDivider" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/buttonRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/addButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:contentDescription="@string/add_button_content_desc"
                    android:onClick="onAddButtonClick"
                    android:src="@drawable/add"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.4" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView">

        <Space
            android:id="@+id/space1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/startSizeTitle"
            app:layout_constraintEnd_toStartOf="@id/startSizeTitle"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/startSizeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/start_size_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/startSizeInput"
            app:layout_constraintStart_toEndOf="@id/space1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.175" />

        <EditText
            android:id="@+id/startSizeInput"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/size_input_hint"
            android:inputType="number|numberDecimal"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/startSizeTitle"
            app:layout_constraintEnd_toStartOf="@id/space2"
            app:layout_constraintStart_toEndOf="@id/startSizeTitle" />

        <Space
            android:id="@+id/space2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/startSizeInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/startSizeInput" />

        <Space
            android:id="@+id/space3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/endSizeTitle"
            app:layout_constraintEnd_toStartOf="@id/endSizeTitle"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/endSizeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/end_size_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/endSizeInput"
            app:layout_constraintStart_toEndOf="@id/space3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.825" />

        <EditText
            android:id="@+id/endSizeInput"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/size_input_hint"
            android:inputType="number|numberDecimal"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@id/endSizeTitle"
            app:layout_constraintEnd_toStartOf="@id/space4"
            app:layout_constraintStart_toEndOf="@id/startSizeTitle" />

        <Space
            android:id="@+id/space4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/endSizeInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/endSizeInput" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
